# jules-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  REF.json
.github/workflows/: ci.yml  release.yml
src/: client.rs  error.rs  lib.rs  models.rs
