[package]
name = "jules-rs"
version = "0.1.0"
edition = "2024"
description = "Production-grade client for the Jules API"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
url = "2.4"
base64 = "0.21"